# scraper

./: .copier-answers.yml  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: composer-deploy-dags.yaml  scraper-api-deploy.yaml  tests.yaml
_plan/: distribuir-dags-scraping.md  known-url-fence.md
airflow/: .airflowignore  .dockerignore  CLAUDE.md  README.md  requirements.txt
airflow/.astro/: config.yaml
dags/: cleanup_old_scrape_runs.py  monitor_scraping_health.py  notify.py  scrape_agencies.py  scrape_ebc.py  scraper_coverage_report.py
dags/config/: README.md  site_urls.yaml
docker/: Dockerfile
docs/: runbook.md
scripts/: create_scrape_runs.sql  validate_monitoring.py
src/govbr_scraper/: __init__.py  api.py
tests/integration/: conftest.py  test_affected_agencies.py  test_ebc_integration.py  test_plone6_integration.py
tests/unit/: conftest.py  test_api.py  test_config_sync.py  test_content_cleaning.py  test_content_hash.py  test_dag_monitor_health.py  test_dag_scrape_agencies.py  test_dag_variable_validation.py  test_ebc_scrape_manager.py  test_ebc_scraper.py  test_error_classification.py  test_event_publisher.py  test_health_checks.py  test_integrity.py  test_known_url_fence.py  test_notify.py  test_plone6_agency_migration.py  test_plone6_api_scraper.py  test_postgres_manager_config.py  test_postgres_manager_insert.py  test_postgres_manager_update.py  test_postgres_manager_url_dedup.py  test_published_at_extraction.py  test_scrape_manager.py  test_scrape_manager_monitoring.py  test_scrape_manager_plone6.py  test_scrape_run_tracking.py  test_storage_adapter_conversion.py  test_storage_adapter_events.py  test_structured_log.py  test_unique_id.py  test_webscraper_extraction.py  test_webscraper_refactorings.py  (+2 more)
(+21 files in other folders)
