[tool.poetry]
name = "govbr-scraper"
version = "1.0.0"
description = "Gov.br and EBC news scraper for DestaquesGovBr"
authors = ["Nitai Bezerra <nitai@example.com>"]
readme = "CLAUDE.md"
packages = [{include = "govbr_scraper", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"

# Database
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.23"

# API (Cloud Run scraper service)
fastapi = "^0.115.0"
uvicorn = {version = "^0.34.0", extras = ["standard"]}

# Web scraping
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
retry = "^0.9.2"
markdownify = "^0.14.1"

# EBC smart_sleep
numpy = ">=1.26.0"
scipy = "^1.11.0"

# Configuration
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
pyyaml = "^6.0.2"

# Utilities
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
black = "^23.12.1"
ruff = "^0.1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=govbr_scraper",
    "--cov-report=term-missing",
]
